--- a/Github.ipynb
+++ b/Github.ipynb
@@ -14,9 +14,17 @@
     "#A version control is system that track changes to your code files and can revert these changes if needed. \n",
     "#It also helps to test multiple versions of code. \n",
     "#3) explain how in a group project (which we are not doing) github could help manage collaboration.\n",
-    "#It helpe in quality control continuous peer review and collaboration and increase transparency of data management specially when working in groups.\n",
-    "#With GitHub, team members can review each other's code or data changes. "
+    "#With GitHub, team members can review each other's code or data changes. \n",
+    "#It helpe in quality control continuous peer review and collaboration and increase transparency of data management when working in groups."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13b3b56d-31d7-472e-9171-548106a97e1d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
