--- a/GITHUB 2.ipynb
+++ b/GITHUB 2.ipynb
@@ -7,7 +7,8 @@
    "source": [
     "#Make a new code notebook. \n",
     "#In the notebook make a markdown cell and answer the following 3 questions 1) name one purpose for github; \n",
-    "#platform for hosting and sharing code repositories online.  Many publications related to computational and data-driven fields, include GitHub links to share their code and workflows. \n",
+    "#platform for hosting and sharing code repositories online.  Many publications related to computational and data-driven fields, 
+#include GitHub links to share their code and workflows. \n",
     "#2) describe what is version control in your own words and how it could help you in your project;\n",
     "#A version control is system that track changes to your code files and can revert these changes if needed. \n",
     "#It also helps to test multiple versions of code. \n",
